--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/webp" href="/pic13.webp "  />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="This is a MY PORTFOLIO WEBSITE">
+    <meta name="description" content="This is  my PORTFOLIO WEBSITE">
     <meta name="keywords" content="Samson-Iloha, React, JavaScript, HTML, CSS, Web Development">
     <meta name="author" content="Samson-Iloha">
     <meta name="robots" content="index, follow">
